feat: add TEE ValidationRegistry integration for 8004scan badge
- Create validationSubmitter.ts with ensureAgentValidated() for on-chain TEE attestation
- Add ValidationRegistry address (0x8004C269D0A5647E51E121FeB226200ECE932d55) to contracts
- Add erc8004ValidationAddress config field
- Call ensureAgentValidated after agent registration with self-validation flow
- Add tee-attestation to OASF supportedTrust when TEE enabled
- Enable TEE_MODE=local in development environment

--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,9 @@ ERC8004_IDENTITY_ADDRESS=
 # Reputation contract address (Base Sepolia: 0x8004B663056A597Dffe9eCcC1965A193B7388713)
 # Production: 0x8004BAa17C55a88189AE136b182e5fdA19dE9b63
 ERC8004_REPUTATION_ADDRESS=
+# Validation Registry address (Base Sepolia: 0x8004C269D0A5647E51E121FeB226200ECE932d55)
+# Production: 0x8004C269D0A5647E51E121FeB226200ECE932d55
+ERC8004_VALIDATION_ADDRESS=
 
 # Settlement Worker (Optional - for automatic on-chain USDC settlement)
 # RPC URL for the settlement chain (Base Sepolia or Base Mainnet)
