--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "@x402/fetch": "^2.3.0",
     "supertest": "^7.2.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0",
