chore: update local env config, docs, and tests
Disable ERC-8004 and TEE in local dev to prevent overwriting
on-chain metadata. Add chat and taskWorker local mode tests.
Update README with chat endpoint documentation.

--- a/.env.example
+++ b/.env.example
@@ -104,3 +104,10 @@ SETTLEMENT_OPERATOR_ADDRESS=
 # Base Sepolia: 0x036CbD53842c5426634e7929541eC2318f3dCF7e
 # Base Mainnet: 0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913
 SETTLEMENT_USDC_ADDRESS=
+
+# Chat / LLM Configuration (Optional)
+# Gemini API key for natural language chat interface
+# If not set, POST /api/v1/chat returns 503 Service Unavailable
+# Free tier: 15 RPM, 1500 RPD, 1M TPM (no cost)
+# Get your key at: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=
