refactor: standardize OpenAI Chat Completions response format
- Move session management from body (x_session_id/x_session_secret) to
  HTTP headers (X-Session-Id/X-Session-Secret)
- Remove x_proofport custom extension from response body
- Embed structured data (proof results, signing URLs) in content text
  as fenced ```proofport DSL block
- Response body is now pure OpenAI Chat Completions format
- Remove old createChatRoutes (fully replaced by openaiHandler)
- Update swagger docs for /v1/chat/completions endpoint
- Simplify Telegram bot to thin client (read session from headers,
  display content as-is)

--- a/telegram-bot/.env.example
+++ b/telegram-bot/.env.example
@@ -2,4 +2,4 @@
 TELEGRAM_BOT_TOKEN=
 
 # Optional: Chat API URL (defaults to staging server)
-CHAT_API_URL=https://stg-ai.zkproofport.app/api/v1/chat
+CHAT_API_URL=https://stg-ai.zkproofport.app/v1/chat/completions
