feat: add OpenTelemetry tracing with Phoenix OTLP exporter
Instrument A2A task handler and worker with spans for message/send,
message/stream, tasks/get, tasks/cancel, and task processing. Traces
include session_id attribute matching A2A contextId for per-conversation
trace grouping in Arize Phoenix.

--- a/.env.example
+++ b/.env.example
@@ -111,3 +111,9 @@ SETTLEMENT_USDC_ADDRESS=
 # Free tier: 15 RPM, 1500 RPD, 1M TPM (no cost)
 # Get your key at: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=
+
+# A2A Testing (optional)
+# CORS allowed origins for A2A UI (comma-separated, e.g. http://localhost:3000)
+A2A_CORS_ORIGINS=
+# Arize Phoenix collector endpoint for tracing (e.g. http://phoenix:6006)
+PHOENIX_COLLECTOR_ENDPOINT=
