--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
     "mcp:stdio": "node dist/mcp/stdio.js",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:e2e": "./scripts/a2a-e2e-test.sh",
+    "test:e2e:quick": "./scripts/a2a-e2e-test.sh --quick",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
+    "@opentelemetry/resources": "^2.5.1",
+    "@opentelemetry/sdk-node": "^0.212.0",
+    "@opentelemetry/sdk-trace-base": "^2.5.1",
+    "@opentelemetry/sdk-trace-node": "^2.5.1",
+    "@opentelemetry/semantic-conventions": "^1.39.0",
     "@x402/core": "^2.3.0",
     "@x402/evm": "^2.3.0",
     "@x402/express": "^2.3.0",
