--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,7 +5,6 @@ services:
     image: arizephoenix/phoenix:latest
     container_name: proofport-ai-phoenix
     ports:
-      - "6006:6006"
       - "4317:4317"
     environment:
       PHOENIX_WORKING_DIR: /mnt/data
@@ -17,6 +16,17 @@ services:
       timeout: 5s
       retries: 5
       start_period: 15s
+
+  phoenix-proxy:
+    image: nginx:alpine
+    container_name: proofport-ai-phoenix-proxy
+    ports:
+      - "6006:6006"
+    volumes:
+      - ./tools/phoenix-proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      phoenix:
+        condition: service_healthy
 
   a2a-ui:
     build:
