--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "vitest",
     "test:e2e": "./scripts/a2a-e2e-test.sh",
     "test:e2e:quick": "./scripts/a2a-e2e-test.sh --quick",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:all": "./scripts/test-all.sh"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
