chore: clean up deprecated scripts and update project config
Remove legacy E2E bash scripts and payment test script in favor of
vitest-based test suites. Add .env.test to gitignore, add vitest
project config, and test setup file.

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@ coverage/
 # Rust prover (unused, bb CLI used instead)
 prover/
 
+# Test environment (contains private keys)
+.env.test
+
 # OMC state
 .omc/
