feat: add RainbowKit payment page and wallet disconnect for Telegram bot
- Replace inline HTML payment page with RainbowKit + wagmi Next.js page
  supporting WalletConnect in Telegram's in-app browser
- Add Change Wallet button to both signing and payment pages
- Extract signing/payment URLs as inline keyboard buttons in Telegram bot
- Centralize IP-dependent config in docker-compose.yml using ${HOST_IP}
- Add ai-dev.sh script for auto LAN IP detection on local dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       dockerfile: Dockerfile
       args:
         NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID: 9a54a0419fc6c86a2bde3d44c4f1615c
-        NEXT_PUBLIC_API_BASE_URL: http://localhost:4002
+        NEXT_PUBLIC_API_BASE_URL: http://${HOST_IP:-localhost}:4002
     container_name: proofport-ai
     ports:
       - "4002:4002"
@@ -29,6 +29,8 @@ services:
       BB_PATH: /usr/local/bin/bb-wrapper
       NARGO_PATH: /usr/local/bin/nargo
       CIRCUITS_DIR: /app/circuits
+      SIGN_PAGE_URL: http://${HOST_IP:-localhost}:4002
+      A2A_BASE_URL: http://${HOST_IP:-localhost}:4002
     depends_on:
       redis:
         condition: service_healthy
