--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test:all": "vitest run"
   },
   "dependencies": {
+    "@a2a-js/sdk": "^0.3.10",
+    "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
@@ -33,14 +35,18 @@
     "ethers": "^6.13.0",
     "express": "^4.21.0",
     "ioredis": "^5.4.0",
+    "openai": "^6.22.0",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "@vitest/coverage-v8": "^3.2.4",
     "@x402/fetch": "^2.3.0",
+    "supertest": "^7.2.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0",
     "vitest": "^3.0.0"
