refactor: rename proveragent.eth to proveragent.base.eth and add agent icon
- Rename agent identity from proveragent.eth to proveragent.base.eth across all files
- Add image field to ERC-8004 metadata (agentCard, autoRegister, validationSubmitter)
- Icon served from public/icon.png (600x600 PNG, 8004scan compatible)

--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proofport-telegram-bot",
   "version": "1.0.0",
-  "description": "Telegram bot interface for proveragent.eth — generate and verify zero-knowledge proofs via natural language",
+  "description": "Telegram bot interface for proveragent.base.eth — generate and verify zero-knowledge proofs via natural language",
   "type": "module",
   "main": "bot.mjs",
   "scripts": {
