--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "express": "^4.21.0",
     "ioredis": "^5.4.0",
     "openai": "^6.22.0",
+    "pino": "^10.3.1",
+    "pino-pretty": "^13.1.3",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
+    "@types/pino": "^7.0.4",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
     "@vitest/coverage-v8": "^3.2.4",
