fix: restore ExecStartPre for ECR login in systemd service
ECR login and image pull are handled by the systemd service using
the EC2 IAM instance profile (or AWS credentials file), not by
the CI/CD pipeline.

--- a/aws/systemd/proofport-ai.service
+++ b/aws/systemd/proofport-ai.service
@@ -18,7 +18,7 @@ SyslogIdentifier=proofport-ai
 EnvironmentFile=/opt/proofport-ai/.env
 
 # Pull the latest image from ECR before starting.
-# Uses the instance IAM role for ECR authentication.
+# Uses the EC2 IAM instance profile for ECR authentication.
 ExecStartPre=/usr/local/bin/ecr-login.sh
 ExecStartPre=/usr/bin/docker pull ${AI_IMAGE}
 
