chore: track prover source in git, ignore only target/
The Rust prover is now actively used for the Nitro Enclave.
Remove blanket prover/ ignore, keep prover/target/ ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ coverage/
 # Docker
 .dockerignore
 
-# Rust prover (unused, bb CLI used instead)
-prover/
+# Rust prover build artifacts
+prover/target/
 
 # Test environment (contains private keys)
 .env.test
