--- a/aws/systemd/proofport-ai.service
+++ b/aws/systemd/proofport-ai.service
@@ -45,6 +45,7 @@ ExecStart=/usr/bin/docker run \
   --rm \
   --network host \
   --device /dev/vsock \
+  --security-opt seccomp=unconfined \
   --env-file /opt/proofport-ai/.env \
   -v /opt/proofport-ai/circuits:/app/circuits \
   -v /opt/proofport-ai/logs:/app/logs \
