feat: add TEE retry logic, fatal NSM attestation, CloudWatch logging
- Add exponential backoff retry (5 attempts) for TEE enclave connection
  errors in skillHandler.ts (ECONNREFUSED, ECONNRESET, timeout)
- Make NSM attestation fatal in enclave-server.py when /dev/nsm exists
  (previously non-fatal, causing silent attestation loss)
- Add CloudWatch awslogs driver config to proofport-ai.service

--- a/aws/systemd/proofport-ai.service
+++ b/aws/systemd/proofport-ai.service
@@ -47,6 +47,11 @@ ExecStart=/usr/bin/docker run \
   --device /dev/vsock \
   --security-opt seccomp=unconfined \
   --env-file /opt/proofport-ai/.env \
+  --log-driver=awslogs \
+  --log-opt awslogs-region=ap-northeast-2 \
+  --log-opt awslogs-group=/proofport-ai/${DEPLOY_ENV} \
+  --log-opt awslogs-stream-prefix=app \
+  --log-opt awslogs-create-group=true \
   -v /opt/proofport-ai/circuits:/app/circuits \
   -v /opt/proofport-ai/logs:/app/logs \
   ${AI_IMAGE}
